--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=zomato
+
+server.port=8989
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/zomatoclone
+spring.datasource.username=root
+spring.datasource.password=Piyush@27
+
